crates/psp-test-macro/ui-tests/crate.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `foo`
  --> ui-tests/crate.rs:17:29
   |
17 | #[test(crate = foo)]
   |                ^^^ use of undeclared crate or module `foo`
